[project]
name = "subpck-core"
description = "The utility objects for the data engine package"
license = {text = "MIT"}
authors = [{ name = "korawica", email = "korawich.anu@gmail.com" }]
classifiers = [
    "Programming Language :: Python :: 3 :: Only",
]
requires-python = ">=3.8.10"
version = '0.0.1'

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
